techworld-with-nana-container-orchestration-with-kubernetes/master/modules/infra/dashboard-ingress/dashboard-ingress-v1.yaml
#Adding comments
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - path: /analytics
            backend:
              serviceName: analytics-service
              servicePort: 3000 
          - path: /shopping
            backend:
              serviceName: shopping-service
              servicePort: 8080
